# AgentOps-Africa

./: .coverage  .env.example  .gitignore  README.md  api_tree.py  project_tree.py  pyproject.toml  raw_openai_test.py  requirements.txt  tree.py
agentops/: app.py
agentops/agents/: base.py  executve.py  research_agent.py
agentops/ai/: __init__.py  ai_client.py  llm_analyzer.py  prompt_template.py
agentops/ai/llm/: __init__.py  llm_service.py  openai_provider.py  prompts.py
agentops/ai/planning/: __init__.py  ai_planner.py  models.py  planner_prompt_builder.py  planning_pipeline.py  workflow_converter.py  workflow_validator.py
agentops/ai/prompts/: __init__.py  base_prompt_builder.py
agentops/ai/runtime/: agent_context.py  agent_registry.py  agent_result.py  base_agent.py  execution_engine.py
agentops/api/: main.py
agentops/api/dependencies/: auth.py  database.py
agentops/api/routers/: health.py
agentops/api/schemas/: auth.py  chat.py  research.py
agentops/api/v1/: router.py
agentops/builders/: agent_builder.py
agentops/clients/: base_client.py  finnhub_client.py  tavily_client.py  yahoo_client.py
agentops/config/: providers.py  settings.py
agentops/core/: agent_builder.py  exceptions.py  handlers.py  jwt.py  logger.py  model_provider.py  pagination.py  query.py  query_engine.py  repository_utils.py  responses.py  security.py  specification.py
agentops/db/: mixins.py  session.py
agentops/db/models/: __init__.py  opportunity.py  user.py
agentops/domains/agents/: agent_context.py  executor.py  (+18 more)
agentops/prompts/: research_system.txt
agentops/protocols/: analyzer.py  company.py  finance.py
agentops/providers/: base.py  model_provider.py
agentops/repositories/: opportunity_repository.py  sqlalchemy_opportunity_repository.py  user_repository.py
agentops/services/: auth_service.py
data/: companies.json
docs/adr/: ADR-0004-ai-planner.md
docs/architecture/: platform-architecture.md
docs/decisions/: README.md
docs/founder/: 2026-07-20.md
docs/product/: mvp-roadmap.md  prd-v1.md  product-map.md
docs/vision/: vision.md
examples/: run_research.py
frontend/: package-lock.json  package.json
migrations/: env.py
migrations/versions/: adfdb799198a_create_users_table.py  f47b63a3a116_create_opportunities_table.py
scripts/: project_tree.py
tests/: demo_research_analyzer.py  demo_research_context.py  run_research.py  test_agent_context.py  test_agent_task.py  test_ai_planner.py  test_base_agent_service.py  test_business_analyzer.py  test_company_agent_service.py  test_company_discovery.py  test_company_normalizer.py  test_company_registry.py  test_company_resolution_pipeline.py  test_company_resolver.py  test_company_service.py  test_execution_plan.py  test_execution_progress.py  test_executor.py  test_finance_agent_service.py  test_finance_orchestrator.py  test_finance_service.py  test_financial_analyzer.py  test_finnhub.py  test_finnhub_provider.py  test_models.py  test_openai.py  test_planner.py  test_planner_ai_fallback.py  test_planner_runtime.py  test_planning_pipeline.py  test_provider_registry.py  test_research.py  test_research_agent.py  test_research_analyzer.py  test_research_context.py  test_research_engine.py  test_research_engine_unit.py  test_research_report.py  test_service_registry.py  test_tavily.py  (+6 more)
(+124 files in other folders)
