[project]
name = "agentops-africa"
version = "0.1.0"
description = "Enterprise AI Executive Assistant"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "alembic>=1.18.5",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "deepagents",
    "email-validator>=2.3.0",
    "fastapi>=0.139.2",
    "google-api-python-client",
    "google-auth",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "langchain",
    "langchain-community",
    "langchain-google-genai",
    "langchain-groq",
    "langchain-mcp-adapters",
    "langchain-openai",
    "pwdlib[argon2]>=0.3.0",
    "pydantic",
    "pydantic-settings",
    "pypdf",
    "python-dotenv",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "python-telegram-bot",
    "rapidfuzz",
    "requests",
    "rich",
    "sqlalchemy>=2.0.51",
    "streamlit",
    "tavily-python",
    "uvicorn>=0.51.0",
    "wikipedia",
    "yfinance",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.22",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "UP",  # pyupgrade
    "B",   # bugbear
]

ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["E501"]

[tool.pytest.ini_options]

python_files = [
    "test_*.py",
]

